# algorithm-base

./: .gitignore  README.md  pom.xml
cpp-algorithm/: CMakeLists.txt  LC231.cpp  LC430.cpp  LC66PlusOne.cpp
cpp-algorithm/leetcode/array/: LC121.cpp  LC136.cpp  LC1822.cpp  LC1979.cpp  LC2682.cpp  LC283.cpp  LC66.cpp  LC896.cpp  LC912.cpp
cpp-algorithm/leetcode/bitopt/: LC242.cpp
cpp-algorithm/leetcode/linked/: LC138.cpp  LC147.cpp  LC1472.cpp  LC1670.cpp  LC1721.cpp  LC2181.cpp  LC2807.cpp  LC430.cpp  LC445.cpp  LC817.cpp
cpp-algorithm/leetcode/math/: LC258.cpp
cpp-algorithm/leetcode/string/: LC1768.cpp  LC28.cpp  LC389.cpp
cpp-algorithm/leetcode/structure/: ListNode.h  Node.h
cpp-algorithm/leetcode/util/: Utils.cpp  Utils.h
java-algorithm/: README.md  pom.xml
java-algorithm/src/main/java/cn/tiakon/java/example/: Case01SparseArray.java  Case02MaxReverseParticiple.java  Case03Resolve1024.java  面试题目20220211最大逆向分词-.docx
java-algorithm/src/main/java/cn/tiakon/java/leetcode/array/: LC1282GroupThePeople.java  LC1460ReversingSubArrays.java  LC1656DesignOrderedStream.java  LC167TwoSumII.java  LC189RotateArray.java  LC2475NumberOfUnequalTripletsInArray.java  LC26RemoveDuplicatesFromSortedArray.java  LC27RemoveElement.java  LC303RangeSumQueryImmutable.java  LC349IntersectionOfTwoArrays.java  LC350IntersectionOfTwoArraysII.java  LC56MergeIntervals.java  LC698PartitionToKEqualSumSubsets.java  LC724FindPivotIndex.java  LC769MaxChunksToMakeSorted.java  LC80RemoveElement.java
java-algorithm/src/main/java/cn/tiakon/java/leetcode/backtrack/: LC46Permutations.java  LC77Combinations.java  LC784LetterCasePermutation.java
java-algorithm/src/main/java/cn/tiakon/java/leetcode/datastructure/: DequeNode.java  ListNode.java  Node.java  NodeV2.java  TreeNode.java
java-algorithm/src/main/java/cn/tiakon/java/leetcode/dp/: LC1137NthTribonacciNumber.java  LC509FibonacciNumber.java  LC70ClimbingStairs.java
java-algorithm/src/main/java/cn/tiakon/java/leetcode/greedy/: LC455AssignCookies.java
java-algorithm/src/main/java/cn/tiakon/java/leetcode/hashtable/: LC01TwoSum.java  LC1636SortArrayByIncreasingFrequency.java  LC705.java  LC706.java  LC706MyHashMap.java  LC706MyHashMapTree.java
java-algorithm/src/main/java/cn/tiakon/java/leetcode/linked/: Interview0205SumListsLcci.java  LC02AddTwoNumbers.java  LC1290ConvertBinaryNumberInLinkedToInteger.java  LC138CopyListWithRandomPointer.java  LC141LinkedListCycle.java  LC142LinkedListCycleII.java  LC143ReorderList.java  LC160IntersectionOfTwoLinkedLists.java  LC1669MergeInBetweenLinkedLists.java  LC1721SwappingNodesInALinkedList.java  LC19RemoveNthNodeFromEndOfList.java  LC203RemoveLinkedElements.java  LC206ReverseList.java  LC21MergeTwoLists.java  LC234PalindromeLinkedList.java  LC237DeleteNodeInLinked.java  LC24SwapNodesInPairs.java  LC2807.java  LC328OddEvenLinkedList.java  LC445AddTwoNumbersII.java  LC61RotateList.java  LC707DesignDoubleLinkedList.java  LC707DesignLinkedList.java  LC707MyLinkedList.java  LC725SplitLinkedListInParts.java  LC817LinkedListComponents.java  LC82RemoveDuplicatesFromSortedList.java  LC83RemoveDuplicatesFromSortedList.java  LC86PartitionList.java  LC876MiddleOfTheLinkedList.java  LC92ReverseLinkedListII.java
java-algorithm/src/main/java/cn/tiakon/java/leetcode/math/: LC1232CheckIfIsStraightLine.java  LC1281SubtractProductAndSumOfDigitsOfInteger.java  LC50PowXN.java  (+12 more)
java-algorithm/src/main/java/cn/tiakon/java/msra/: README.md
java-algorithm/src/main/java/cn/tiakon/java/sro/: README.md
java-algorithm/src/main/java/cn/tiakon/java/srost/: README.md
java-algorithm/src/main/java/cn/tiakon/java/utils/: ArrayUtils.java  CreateRandomIntNumFile.java  ListUtils.java  MathRandomUtil.java  MathRandomUtilException.java  RandomStackAndArray.java  TreeUtils.java
scala-algorithm/: README.md  pom.xml
scala-algorithm/src/main/resources/: log4j.properties
scala-algorithm/src/main/scala/cn/tiakon/scala/atguigu/: Case01SparseArray.scala
scala-algorithm/src/test/scala/cn/tiakon/scala/atguigu/: Case01SparseArrayTest.scala  HeapSort.scala
(+218 files in other folders)
